--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "connect-history-api-fallback": "^1.6.0",
     "express": "^4.16.4",
-    "foundation-sites": "^6.5.3",
     "lodash": "^4.17.11",
     "mongodb": "^3.1.13",
     "monk": "^6.0.6",
@@ -32,10 +31,10 @@
     "concurrently": "^4.1.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.11.0",
     "nodemon": "^1.18.10",
     "prettier": "^1.16.4",
     "sass-loader": "^7.1.0",
+    "tailwindcss": "^0.7.4",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
@@ -50,11 +49,6 @@
     "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
     }
   },
   "browserslist": [
